add electric field vector

--- a/css/styles.css
+++ b/css/styles.css
@@ -135,3 +135,8 @@ svg#grid {
     font-size: 10px;
     fill: black;
 }
+
+.point-p-label {
+    pointer-events: none; /* Disable text interaction */
+    user-select: none;    /* Prevent text highlighting */
+}
